--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="status">
         <p>残りのお金: <span id="money">10000</span></p>
+        <p>試作品だよ^o^</p>
         <p id="message"></p>
     </div>
     <script src="script.js"></script>
