--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="payout-table">
+        <h2>倍率表</h2>
+        <table>
+            <tr>
+                <th>シンボル</th>
+                <th>倍率</th>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td>5倍</td>
+            </tr>
+            <tr>
+                <td>B</td>
+                <td>3倍</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>2倍</td>
+            </tr>
+            <tr>
+                <td>D</td>
+                <td>1倍</td>
+            </tr>
+        </table>
+    </div>
     <div class="slot-machine">
         <div class="reel" id="reel1">A</div>
         <div class="reel" id="reel2">A</div>
