--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 <th>倍率</th>
             </tr>
             <tr>
+                <td>AAA</td>
+                <td>4倍</td>
+            </tr>
+            <tr>
+                <td>ABC</td>
+                <td>5倍</td>
+            </tr>
+            <tr>
                 <td>A</td>
                 <td>5倍</td>
             </tr>
