--- a/index.html
+++ b/index.html
@@ -8,35 +8,31 @@
 </head>
 <body>
     <div class="payout-table">
-        <h2>倍率表</h2>
+        <h2>役と倍率</h2>
         <table>
             <tr>
-                <th>シンボル</th>
+                <th>役</th>
                 <th>倍率</th>
             </tr>
             <tr>
                 <td>AAA</td>
-                <td>4倍</td>
+                <td>40倍</td>
+            </tr>
+            <tr>
+                <td>BBB</td>
+                <td>30倍</td>
+            </tr>
+            <tr>
+                <td>CCC</td>
+                <td>20倍</td>
+            </tr>
+            <tr>
+                <td>DDD</td>
+                <td>10倍</td>
             </tr>
             <tr>
                 <td>ABC</td>
-                <td>5倍</td>
-            </tr>
-            <tr>
-                <td>A</td>
-                <td>5倍</td>
-            </tr>
-            <tr>
-                <td>B</td>
-                <td>3倍</td>
-            </tr>
-            <tr>
-                <td>C</td>
-                <td>2倍</td>
-            </tr>
-            <tr>
-                <td>D</td>
-                <td>1倍</td>
+                <td>50倍</td>
             </tr>
         </table>
     </div>
