--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             </tr>
             <tr>
                 <td>AAA</td>
-                <td>40倍</td>
+                <td>4倍</td>
             </tr>
             <tr>
                 <td>BBB</td>
-                <td>30倍</td>
+                <td>3倍</td>
             </tr>
             <tr>
                 <td>CCC</td>
-                <td>20倍</td>
+                <td>2倍</td>
             </tr>
             <tr>
                 <td>DDD</td>
-                <td>10倍</td>
+                <td>1倍</td>
             </tr>
             <tr>
                 <td>ABC</td>
-                <td>50倍</td>
+                <td>5倍</td>
             </tr>
         </table>
     </div>
@@ -54,6 +54,7 @@
         <p>残りのお金: <span id="money">10000</span></p>
         <p>試作品だよ^o^</p>
         <p id="message"></p>
+        <p>最高記録: <span id="highest-money">0</span></p>
     </div>
     <script src="script.js"></script>
 </body>
