--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
         <h2>役と倍率</h2>
         <table>
             <tr>
-                <th>役</th>
-                <th>倍率</th>
+                <th>AAA</th>
+                <th>BBB</th>
+                <th>CCC</th>
+                <th>DDD</th>
+                <th>ABC</th>
+                <th>ACB</th>
+                <th>BAC</th>
+                <th>BCA</th>
+                <th>CAB</th>
+                <th>CBA</th>
             </tr>
             <tr>
-                <td>AAA</td>
                 <td>4倍</td>
-            </tr>
-            <tr>
-                <td>BBB</td>
                 <td>3倍</td>
-            </tr>
-            <tr>
-                <td>CCC</td>
                 <td>2倍</td>
-            </tr>
-            <tr>
-                <td>DDD</td>
                 <td>1倍</td>
-            </tr>
-            <tr>
-                <td>ABC</td>
                 <td>5倍</td>
+                <td>3倍</td>
+                <td>3倍</td>
+                <td>3倍</td>
+                <td>3倍</td>
+                <td>3倍</td>
             </tr>
         </table>
     </div>
