--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <label for="bet">ベット額: </label>
         <input type="number" id="bet" min="1" max="100" value="10">
         <button id="start">スタート</button>
-        <button id="stop1" disabled>ストップ 1</button>
-        <button id="stop2" disabled>ストップ 2</button>
-        <button id="stop3" disabled>ストップ 3</button>
-        <button id="reroll" disabled>再ロール</button>
+        <button id="stop1" disabled>▪️</button>
+        <button id="stop2" disabled>▪️</button>
+        <button id="stop3" disabled>▪️</button>
+        <button id="reroll" disabled>↻</button>
     </div>
     <div class="status">
         <p>残りのお金: <span id="money">10000</span></p>
