--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <div class="controls">
         <label for="bet">ベット額: </label>
         <input type="number" id="bet" min="1" max="100" value="10">
-        <button id="start">スタート</button>
-        <button id="stop1" disabled>▪️</button>
-        <button id="stop2" disabled>▪️</button>
-        <button id="stop3" disabled>▪️</button>
+        <button id="start">Start</button>
+        <button id="stop1" disabled>◾️</button>
+        <button id="stop2" disabled>◾️</button>
+        <button id="stop3" disabled>◾️</button>
         <button id="reroll" disabled>↻</button>
     </div>
     <div class="status">
-               <p id="message"></p>
         <p>残りのお金: <span id="money">10000</span></p>
+        <p>試作品だよ^o^</p>
+        <p id="message"></p>
         <p>最高記録: <span id="highest-money">0</span></p>
-      <p>試作品だよ^o^</p>
     </div>
     <script src="script.js"></script>
 </body>
