--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <button id="reroll" disabled>↻</button>
     </div>
     <div class="status">
-        <p>残りのお金: <span id="money">10000</span></p>
+        <p>残りのお金: <span id="money">100000000</span></p>
         <p>試作品だよ^o^</p>
         <p id="message"></p>
         <p>最高記録: <span id="highest-money">0</span></p>
